# goit-pythonweb-hw-03

./: Dockerfile  README.md  docker-compose.yml  index.html  main.py  message.html  pyproject.toml  requirements.txt
app/: logger.py  storage.py
template/: read.html
