[tool.poetry]
name = "goit-pythonweb-hw-03"
version = "0.1.0"
description = ""
authors = ["Volodymyr Vovnenko <vovnenko.volodymyr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
